# dumper-rs

./: Cargo.toml  README.md
src/: app.rs  cli.rs  main.rs  manifest.rs  output.rs  pipeline.rs
src/fs/: detect.rs  erofs.rs  ext4.rs  mod.rs
src/model/: mod.rs
src/ota/: extract.rs  mod.rs
